refactor: matching node names in CLI and web